--- a/requirements.org
+++ b/requirements.org
@@ -42,12 +42,12 @@
    - [x] The webservice can pass all the tests in not-free-tests.py (you only have part of this one, I reserve the right to add tests)
    - [x] The webservice can serve /static/index.html
    - [ ] static/index.html displays the current state of the webservice
-   - [ ] static/index.html responds to clicks within 100ms on average
+   - [X] static/index.html responds to clicks within 100ms on average
    - [ ] Make static/index.html images look nice
    - [ ] implement anything marked XXX TODO: in static/index.html
-   - [ ] /clear returns the current state of the world {}
-   - [ ] PUT returns the object that was PUT. 
-   - [ ] http://hostname:5000/static/index.html will work to produce the UI
+   - [X] /clear returns the current state of the world {}
+   - [X] PUT returns the object that was PUT. 
+   - [X] http://hostname:5000/static/index.html will work to produce the UI
          (so http://127.0.0.1:5000/static/index.html should work and http://localhost:5000/static/index.html should work)
 
  
